# AILock-Security-Core

./: .gitignore  COPYRIGHT.txt  Cargo.toml  README.md  SECURITY_DESIGN.md
.github/: ROLE_SPEC.md
axiom-core/: Cargo.toml
axiom-core/src/: axiom.rs  error.rs  lib.rs  substrate.rs
axiom-examples/: Cargo.toml
axiom-lst/: Cargo.toml
axiom-lst/src/: entry.rs  ledger.rs  lib.rs  log.rs  merkle.rs
axiom-mcp/: Cargo.toml
axiom-mcp/src/: engine.rs  executor.rs  handler.rs  lib.rs  wasm_gate.rs
axiom-security/: Cargo.toml
axiom-security/src/: hitl_axioms.rs  lib.rs  production_axioms.rs  repository_axioms.rs
axiom-substrate/: Cargo.toml
axiom-substrate/src/: lib.rs  prober.rs  verifier.rs
warden/: go.mod  interceptors.go  lattice.go  main.go
