[workspace]
members = [
    "axiom-core",
    "axiom-mcp",
    "axiom-substrate",
    "axiom-lst",
    "axiom-security",
    "axiom-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AxiomHive Team"]
license = "MIT"
repository = "https://github.com/axiomhive/axiomhive"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
